# CMakeList.txt: projekt CMake dla elementu 4.6, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (4.6 "4.6.c" "4.6.h" "matrix_utils.h" "matrix_utils.c")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
